# 3D-Registration-with-Maximal-Cliques

./: .gitignore  pointcloud_merge.py
Linux/: CMakeLists.txt  Eva.h  PCR.cpp  align_coloradar_hard.sh  align_coloradar_seqs.cpp  align_pointcloudmap.m  funcs.cpp  main.cpp  merge_pc_with_pose.m  pc_utils.cpp  pc_utils.h  readme.md  registration.cpp  run_rosbag_loc.sh  sequential_loc_rosbag.cpp  visualization.cpp
